src/objects/Product_Table__c.object
<CustomObject>
    <fields>
        <fullName>Added_Date__c</fullName>
        <label>Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image_Url__c</fullName>
        <label>Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_Available__c</fullName>
        <label>Units Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Product Tables</relationshipLabel>
        <relationshipName>Product_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_on_0</fullName>
        <active>true</active>
        <description>Unit Price less then 0</description>
        <errorConditionFormula>Unit_Price__c  &lt;= 0</errorConditionFormula>
        <errorMessage>Unit Price cannot be 0 or less</errorMessage>
    </validationRules>
</CustomObject>